# Buddies_Gen

./: .gitignore  CMakeLists.txt  README.md
include/: nocopy.hpp
src/: main.cpp
src/attribute/: attribute.hpp  attribute_list.hpp  attributes.cpp  attributes.hpp  background_attributes.cpp  background_attributes.hpp  color.hpp  eye_attributes.cpp  eye_attributes.hpp  hair_attributes.cpp  hair_attributes.hpp  mouth_attributes.cpp  mouth_attributes.hpp  skin_attributes.cpp  skin_attributes.hpp  special_attributes.cpp  special_attributes.hpp  top_attributes.cpp  top_attributes.hpp  type_attributes.cpp  type_attributes.hpp
src/generation/: buddy.hpp  dinosaur_generator.cpp  elephant_generator.cpp  female_generator.cpp  generation.cpp  generation.hpp  jar_generator.cpp  layout.cpp  layout.hpp  male_generator.cpp  monkey_generator.cpp
src/image/: image.cpp  image.hpp  raylib_image.hpp
src/random/: aliastable.cpp  aliastable.hpp
